Fixed bug where inputting a decimal would create an overflow of shapes on the grid

--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,6 @@ h1 {
        size changes.  You could
        make it always be 4.25%
        of the width.  */
-    background-color: yellow;
+    background-color: white;
 
 }
